tests/fixtures/negative/documentation/ValidGroupTagValues.cls
/**
 * @group InvalidValue
 */
public class InvalidClass {
	/**
	 * @group Custom
	 */
	public class InvalidInnerClass {
	}

	/**
	 * @group Classes
	 */
	public class InvalidPlural {
	}

	/**
	 * @group CLASS
	 */
	public class InvalidUpperCase {
	}

	/**
	 * @group
	 */
	public class MissingValue {
	}

	/**
	 * @group Invalid Value With Spaces
	 */
	public class InvalidWithSpaces {
	}

	/**
	 * @group method
	 */
	public void invalidLowerCase() {
	}

	/**
	 * @group InvalidMethodValue
	 */
	public void invalidMethod() {
	}

	/**
	 * @group InvalidPropertyValue
	 */
	public String invalidProperty { get; set; }

	/**
	 * @group InvalidVariableValue
	 */
	public String invalidVariable;
}

